JSON encoder deleted, inefficent. - ConcavePolygon class deleted, I want convex polygons. - Polygons are now convex. - Concave Polygon creation enforced in constructor method.